# RGB-Agent

./: README.md  SUBMISSION_GUIDE.md  arc26-3-agent-v15 (2).ipynb  arc3-agent-evaluation-and-recording-viewer (1).ipynb  kaggle_rgb_agent_competition_submission.ipynb  kaggle_rgb_agent_offline_eval.ipynb  local_rgb_agent_eval.ipynb  pyproject.toml
rgb_agent/agent/: __init__.py  action_queue.py  direct_analyzer.py  factory.py  local_transformers_analyzer.py  opencode_agent.py  prompts.py
rgb_agent/environment/: runner.py  swarm.py
rgb_agent/evaluation/: __init__.py  offline_eval.py
rgb_agent/submission/: __init__.py  competition_core.py  render_submission_agent.py
